--- a/Batch-30/yarn-app/src/styles/global.css
+++ b/Batch-30/yarn-app/src/styles/global.css
@@ -66,13 +66,30 @@ header .logo {
     display: inline-block;
     top: 4px;
 }
-
+nav>ul>li {
+    position: relative;
+}
 nav>ul>li>a{
     color: #fff;
     font-weight: bold;
 }
 nav>ul>li>a:hover {
     color: var(--dark-color);
+}
+nav>ul>li .nav_child{
+    position: absolute;
+    left: 0;
+    background-color: #fff;
+    display: none;
+}
+nav>ul>li .nav_child a{
+    color: #333;
+    display: block;
+    margin: 5px 0;
+    padding: 0 10px;
+}
+nav>ul>li .nav_child.actived {
+    display: block;
 }
 
 .cart {
@@ -262,4 +279,43 @@ footer {
     font-size: 28px;
     color: var(--main-color);
     margin-right: 15px;
+}
+
+
+.login_wrapper {
+    max-width: 360px;
+    margin: 0 auto 30px;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.login_wrapper h2{
+    display: block;
+    color: var(--dark-color);
+    margin-bottom: 20px;
+}
+
+.login_wrapper input{
+    width: 100%;
+    padding: 12px 10px;
+    margin: 5px 0;
+}
+
+.login_wrapper button{
+    width: 100%;
+    padding: 12px 10px;
+    margin-top: 10px;
+}
+
+.login_wrapper .note{
+    margin-top: 20px;
+}
+
+.login_wrapper .term {
+    text-align: left;
+    font-size: 12px;
+    line-height: 1.4;
+    margin-top: 10px;
 }
