--- a/5.Demo-Projects/css/index.css
+++ b/5.Demo-Projects/css/index.css
@@ -109,3 +109,49 @@
     border-color: #fff;
     color: var(--main-color);
 }
+
+
+
+.product_wrapper{
+    margin: 20px 0;
+    flex-wrap: wrap;
+}
+
+.product_wrapper .product_item {
+    position: relative;
+    padding: 10px;
+    width: calc((100% - 60px) / 4);
+    margin: 10px 10px 10px 0;
+}
+
+.product_wrapper .product_item .discount{
+    position: absolute;
+    padding:2px 10px;
+    top: 10px;
+    right: 10px;
+    background-color: var(--main-color);
+    color: #fff;
+    border-radius: 5px;
+}
+
+
+.product_wrapper .product_item img{
+    width: 200px;
+    height: 200px;
+}
+
+.product_wrapper .product_item h3{
+    color: var(--dark-color);
+    font-size: 16px;
+    margin: 10px 0;
+    min-height: 54px;
+}
+
+.product_wrapper .product_item .price strong{
+    color: #d0021c;
+}
+
+.swiper-slide img{
+    width: 100%;
+    height: auto;
+}
