--- a/Batch-34/react-vite-ts/src/index.css
+++ b/Batch-34/react-vite-ts/src/index.css
@@ -27,6 +27,9 @@
   button[type='submit'] {
       @apply bg-indigo-600 hover:bg-indigo-500 text-white
   }
+  button[disabled] {
+    @apply cursor-not-allowed opacity-50
+  }
 
  
 }
