--- a/Batch-37/react-vite/src/index.css
+++ b/Batch-37/react-vite/src/index.css
@@ -11,7 +11,7 @@ CSS cho các thẻ
 
 @layer base {
   input {
-    @apply border rounded py-2 px-3;
+    @apply border rounded py-2 px-3 border-slate-400;
   }
   table tr td {
     @apply py-1 px-2 border-b border-slate-400;
