--- a/Batch-38/react-vite/src/index.css
+++ b/Batch-38/react-vite/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+  }
+  input {
+    @apply border rounded border-slate-300 py-2 px-4;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply bg-white border border-slate-300 py-2 px-4 rounded text-slate-700;
+  }
+  .btn-primary {
+    @apply bg-indigo-700 border-indigo-700 text-white;
+  }
+}
+
+@layer utilities {
+  .pdy-2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
