--- a/Batch-39/react-vite/src/index.css
+++ b/Batch-39/react-vite/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  button {
+    @apply bg-indigo-600 text-white py-1 px-3 rounded hover:bg-indigo-500;
+  }
+  input {
+    @apply py-1 px-3 rounded border border-slate-300;
+  }
+}
+
+@layer components {
+  .btn_link {
+    @apply bg-transparent hover:bg-transparent text-black;
+  }
+
+  .btn_blue {
+    @apply bg-transparent hover:bg-transparent text-sky-700;
+  }
+}
