--- a/Batch-39/react-vite/src/components/Attributes.css
+++ b/Batch-39/react-vite/src/components/Attributes.css
@@ -2,4 +2,10 @@
   border: 1px solid #ddd;
   margin-left: 10px;
   padding: 5px 8px;
+  background-color: #fff;
+}
+
+.attr_item.active {
+  border: 1px solid #111;
+  background-color: #f3f3f3;
 }
