--- a/Batch-39/react-vite/src/index.css
+++ b/Batch-39/react-vite/src/index.css
@@ -9,6 +9,9 @@ css mặc định cho các thẻ
   button {
     @apply bg-indigo-600 text-white py-1 px-3 rounded hover:bg-indigo-500;
   }
+  button:disabled {
+    @apply bg-indigo-100 text-slate-500 py-1 px-3 rounded hover:bg-indigo-100;
+  }
   input {
     @apply py-1 px-3 rounded border border-slate-300;
   }
@@ -23,6 +26,10 @@ css mặc định cho các thẻ
 
   .btn_blue {
     @apply bg-transparent hover:bg-transparent text-sky-700;
+  }
+
+  .btn_delete {
+    @apply bg-red-600 text-white hover:bg-red-700;
   }
 }
 /*
