--- a/Batch-194/react-vite-typescript/src/index.css
+++ b/Batch-194/react-vite-typescript/src/index.css
@@ -24,6 +24,9 @@
   .btn_link {
     @apply bg-transparent text-indigo-500 hover:text-indigo-600 border-none underline;
   }
+  .tag {
+    @apply border border-slate-500 py-1 px-3 text-slate-500;
+  }
 }
 /* Các class tiện tích */
 @layer utilities {
