--- a/Batch-194/react-vite-typescript/src/App.css
+++ b/Batch-194/react-vite-typescript/src/App.css
@@ -1,3 +1,17 @@
 .heading {
   color: red;
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.animate-fade-in {
+  animation: fade-in 0.3s ease-out;
+}
